Fix T80530: Crash when switching to Edit Mode

caused by recent merge {33ac3582bbd5}